Fix dark mode font color bug

--- a/style/light-or-dark-mode.css
+++ b/style/light-or-dark-mode.css
@@ -7,3 +7,7 @@ header.dark-mode {
     background-color: var(--dark-header-color);
     color: var(--dark-font-color);
 }
+
+main.dark-mode > button {
+    color: var(--dark-font-color);
+}
