--- a/style/style.css
+++ b/style/style.css
@@ -71,8 +71,8 @@ header {
     width: 28rem;
     font-family: 'Bebas Neue', cursive;
     font-size: 2rem;
-    color: antiquewhite;
-    background-color:black;
+    color: var(--dark-font-color);
+    background-color: var(--dark-background-color);
     border-radius: 2rem;
 }
 
@@ -86,12 +86,14 @@ header {
     width: 5rem;
 }
 
-main > p {
+main > button {
+    width: 100%;
     display: flex;
     justify-content: center;
     padding: 1rem;
     font-family: 'Bebas Neue', cursive;
     font-size: 5rem;
+    color: var(--light-font-color);
 }
 
 footer {
